--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "multiplayer-sword-fighting-game",
+  "name": "multiplayer-sword-game",
   "version": "1.0.0",
-  "description": "A 3D multiplayer sword fighting game",
+  "description": "A multiplayer 3D sword fighting game",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
