--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "multiplayer-sword-game",
+  "name": "multiplayer-sword-fighting-game",
   "version": "1.0.0",
-  "description": "A multiplayer 3D sword fighting game",
+  "description": "A real-time multiplayer 3D sword fighting game",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
+    "three": "^0.154.0",
     "ws": "^8.14.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "author": "",
+  "license": "MIT"
 }
